# hyper-simulation-post

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/contrievers/: __init__.py  beir_utils.py  data.py  dist_utils.py  evaluation.py  finetuning_data.py  inbatch.py  index.py  moco.py  normalize_text.py  options.py  pyproject.toml  slurm.py  utils.py
src/graph-simulation/: Cargo.toml  README.md
src/graph-simulation/benches/: simulation.rs
src/graph-simulation/src/: lib.rs
src/graph-simulation/src/algorithm/: bounded.rs  hyper_simulation.rs  mod.rs  simulation.rs
src/graph-simulation/src/utils/: logger.rs  mod.rs  predicate.rs  validation.rs
src/graph-simulation/tests/: inter.rs  native.rs  simulation_test.rs
src/hyper_simulation/: query_instance.py
src/hyper_simulation/baselines/: BSIM.py  CDIT.py  contradoc.py  sentLI.py  sparseCL.py
src/simulation/: Cargo.toml
src/simulation/tests/: test_hyper_simulation.py  test_simulation.py
tests/: test_batch_simulation.py  test_hypergrah_gen.py  test_hypergraph.py  test_musique_base.py  test_tool.py
tests/tasks/: arc.py  arc_baseline.py  build_arc.py  build_by_token_len.py  build_contract_nli.py  build_control.py  build_docnli.py  build_econ.py  build_hotpotqa.py  build_legalbench.py  build_multihop.py  build_musique.py  check_decompose_structure.py  choose_prompt.py  contra_nli.py  contra_nli_baseline.py  contract_nli_split_time.py  contradoc_time.py  control.py  control_baseline.py  control_time.py  count_hypergraph.py  count_tokens.py  decompose_question.py  decompose_question_multihop.py  docnli.py  docnli_baseline.py  econ.py  econ_baseline.py  econ_time.py  hotpotqa.py  hotpotqa_time.py  legalbench.py  legalbench_baseline.py  multihop.py  musique.py  musique_baseline.py  musique_split_time.py  musique_time.py  support_check.py
tests/tools/: build.py  clean_contract_nli.py  contract_econ.py  dump_hypergraph.py  hyper.py  spacy_debug.py  wordnet_X.py  wordnet_show.py
(+62 files in other folders)
