[project]
authors = [{name = "XXXX", email = "XXXX@XXX.com"}]
dependencies = []
name = "hyper-simulation"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hyper_simulation = { path = ".", editable = true }
# contriever ={ path = "." , editable = true }

[tool.pixi.tasks]
