[project]
authors = [{name = "Gautier Izacard", email = "gizacard@fb.com"}]
dependencies = []
name = "contrievers"
requires-python = ">= 3.8"
version = "1.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
faiss-cpu = { version = ">=1.9.0"}
numpy = ">=1.26.4,<2"


[tool.pixi.tasks]

[tool.hatch.build.targets.wheel]
packages = ["src/contrievers"]