[package]
name = "graph-simulation"
version = "0.1.30"
edition = "2021"
license = "MIT"
description = "A library for simulation algorithm"


[dependencies]
graph-base = "0.1.14"
rand = "0.9.1"
rand_pcg = "0.9.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
fxhash = "0.2.1"
bincode = "1.3.3"
serde_json = "1.0.140"
itertools = "0.14.0"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
criterion = "0.5"
