[package]
name = "simulation"
version = "0.1.14"
edition = "2021"
license = "MIT"
description = "A Python package for simulation algorithms"

[lib]
name = "simulation"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
graph-simulation = "0.1.26"
graph-base = "0.1.14"
rayon = "1.10.0"

[package.metadata.maturin]
bindings = "pyo3"
